--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build-css": "tailwindcss -i ./src/main.css -o ./dist/output.css --watch",
     "build-css-prod": "tailwindcss -i ./src/main.css -o ./dist/output.css --minify",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.2",
+    "vitest": "^1.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "jsdom": "^22.0.0"
   }
 }
